--- a/bid-whist-web-app/frontend/package.json
+++ b/bid-whist-web-app/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.0",
+    "framer-motion": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.4",
