Configure WebSocket URL for Railway backend

--- a/bid-whist-web-app/frontend/.env.production
+++ b/bid-whist-web-app/frontend/.env.production
@@ -1,3 +1,2 @@
 # Production WebSocket URL
-# Update this with your actual backend URL after deployment
-VITE_WS_URL=wss://your-backend-url.ondigitalocean.app
+VITE_WS_URL=wss://bid-whist-production.up.railway.app
