Force disable Gradle daemon and reduce memory for Railway

--- a/bid-whist-web-app/server/gradle.properties
+++ b/bid-whist-web-app/server/gradle.properties
@@ -1,3 +1,13 @@
-# gradle.properties
+# Gradle properties for Railway deployment
 
-# This file is intentionally left blank.
+# Disable daemon for CI/CD environments
+org.gradle.daemon=false
+
+# Reduce memory usage
+org.gradle.jvmargs=-Xmx256m -XX:MaxMetaspaceSize=128m -XX:+UseSerialGC
+
+# Parallel builds (faster)
+org.gradle.parallel=false
+
+# Configure on demand
+org.gradle.configureondemand=false
