Increase Gradle memory to 512MB for Railway

--- a/bid-whist-web-app/server/gradle.properties
+++ b/bid-whist-web-app/server/gradle.properties
@@ -3,11 +3,16 @@
 # Disable daemon for CI/CD environments
 org.gradle.daemon=false
 
-# Reduce memory usage
-org.gradle.jvmargs=-Xmx256m -XX:MaxMetaspaceSize=128m -XX:+UseSerialGC
+# Increase memory for Railway (1GB available)
+org.gradle.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=128m -XX:+UseSerialGC
+
+# Kotlin daemon settings
+kotlin.daemon.jvmargs=-Xmx256m
+kotlin.code.style=official
+kotlin.incremental=true
 
 # Parallel builds (faster)
 org.gradle.parallel=false
 
 # Configure on demand
-org.gradle.configureondemand=false
+org.gradle.configureondemand=true
