feat: Re-design home page

--- a/bid-whist-web-app/server/gradle.properties
+++ b/bid-whist-web-app/server/gradle.properties
@@ -4,10 +4,10 @@
 org.gradle.daemon=false
 
 # Increase memory for Railway (1GB available)
-org.gradle.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=128m -XX:+UseSerialGC
+org.gradle.jvmargs=-Xmx768m -XX:MaxMetaspaceSize=384m -XX:+UseSerialGC
 
 # Kotlin daemon settings
-kotlin.daemon.jvmargs=-Xmx256m
+kotlin.daemon.jvmargs=-Xmx384m -XX:MaxMetaspaceSize=256m
 kotlin.code.style=official
 kotlin.incremental=true
 
